--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,20 @@
     <title>Tech Blog</title>
 </head>
 <body>
-
+    <header>
+        <nav>
+           <a href="/">Home</a>
+           <a href="/dashboard">Dashboard</a>
+            {{#if logged_in}}
+            <button id="logout-btn">Logout</button>
+            <script src="/js/logout.js"></script>
+            {{else}}
+            <a href="/login" id="login-a">Login</a>
+            <script src="/js/login.js"
+            {{/if}}
+        </nav>
+        <h1>Tech Blog</h1>
+    </header>
 
 
     <main>
