--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,8 @@
 {{#each BlogPosts}}
+    <h2>{{sessUserName}}</h2>
     <h3>{{name}}</h3>
     <p>{{description}}</p>
     <button name="{{name}}" class="del-btn" id="{{id}}">Delete Blog</button>
     <hr>
 {{/each}}
+<script src="/js/dashboard.js"></script>
