--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,9 @@
     <div>
         <h3>Login</h3>
         <form id="login-form">
+            <h6>Username</h6>
             <input type="text" id="login-name">
+            <h6>Password</h6>
             <input type="password" id="login-password">
             <button id="login-submit">Login</button>
         </form>
@@ -10,7 +12,9 @@
     <div>
         <h3>Signup</h3>
         <form id="signup-form">
+            <h6>Username</h6>
             <input type="text" id="signup-name">
+            <h6>Password</h6>
             <input type="password" id="signup-password">
             <button id="signup-submit">Signup</button>
         </form>
